force-app/main/default/objects/Nova_Lead_por_Email__e/Nova_Lead_por_Email__e.object-meta.xml
<CustomObject>
    <label>Nova Lead por Email</label>
    <pluralLabel>Novas Leads por Email</pluralLabel>
</CustomObject>