force-app/main/default/objects/Nova_Lead_por_Email__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Mensagem a apresentar na notificação</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>