force-app/main/default/objects/Nova_Lead_por_Email__e/fields/RecipientId__c.field-meta.xml
<CustomField>
    <fullName>RecipientId__c</fullName>
    <description>Id do utilizador destinatário da notificação (será o CreatedById do EmailMessage original)</description>
    <label>RecipientId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>