force-app/main/default/objects/Nova_Lead_por_Email__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Id do registo relacionado (Lead/Opportunity/Case/etc.)</description>
    <label>RecordId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>