force-app/main/default/objects/Nova_Lead_por_Email__e/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>URL absoluto para o registo (Lightning), para navegação direta a partir da notificação</description>
    <label>Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>